--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Document</title>
+    <title>TG</title>
 </head>
 <body>
     <h1>Hallo World!!!</h1>
+    <img src="./img/Т._Г._Шевченко._Квітень_1859.jpg" alt="T.G.Schewchenko" width="200">
     <script src="./js/script.js"></script>
 </body>
 </html>
